# WASM_Sorter_Visualizer

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: main.rs  sort.rs
