[package]
name = "wasm_sorter_visualiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
wasm-bindgen = "^0.2"
js-sys = "^0.3"
rand = "^0.8"
log = "^0.4"
wasm-logger = "^0.2"
getrandom = { version = "0.2", features = ["js"] }
stylist = {version = "0.10", features = ["yew_integration"] }
gloo = "^0.6"

[dependencies.web-sys]
version = "^0.3"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]